tests/spec/emit/snapshots/raw_string_with_cr_falls_back_to_double_quoted.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    r"x\ry"
  }
---
package main

func test() string {
	return "x\ry"
}
