tests/spec/emit/snapshots/raw_string_with_regex_escapes.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    r"\d+"
  }
---
package main

func test() string {
	return `\d+`
}
