tests/spec/emit/snapshots/raw_string_with_windows_path.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    r"C:\Users"
  }
---
package main

func test() string {
	return `C:\Users`
}
