tests/spec/emit/snapshots/receiver_capacity.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(r: Receiver<int>) -> int {
    r.capacity()
  }
---
package main

func test(r <-chan int) int {
	return cap(r)
}
