tests/spec/emit/snapshots/receiver_collision_with_range_loop_variable.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:fmt"
  
  struct IntList {
    items: Slice<int>,
  }
  
  impl IntList {
    fn display(self) -> string {
      let mut s = "["
      for i in 0..self.items.length() {
        if i > 0 {
          s = s + ", "
        }
        let item = self.items[i]
        s = s + f"{item}"
      }
      s + "]"
    }
  }
  
  fn main() {
    let list = IntList { items: [1, 2, 3] }
    fmt.Println(list.display())
  }
---
package main

import "fmt"

type IntList struct {
	items []int
}

func (i IntList) display() string {
	s := "["
	for i_1 := range len(i.items) {
		if i_1 > 0 {
			s += ", "
		}
		item := i.items[i_1]
		s += fmt.Sprint(item)
	}
	return s + "]"
}

func main() {
	list := IntList{items: []int{1, 2, 3}}
	fmt.Println(list.display())
}
