tests/spec/emit/snapshots/receiver_is_empty.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(r: Receiver<int>) -> bool {
    r.is_empty()
  }
---
package main

func test(r <-chan int) bool {
	return len(r) == 0
}
