tests/spec/emit/snapshots/receiver_iteration.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn process(v: int) {}
  
  fn test(rx: Receiver<int>) {
    for v in rx {
      process(v);
    }
  }
---
package main

func process(_ int) {}

func test(rx <-chan int) {
	if rx != nil {
		for v := range rx {
			process(v)
		}
	}
}
