tests/spec/emit/snapshots/receiver_length.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(r: Receiver<int>) -> int {
    r.length()
  }
---
package main

func test(r <-chan int) int {
	return len(r)
}
