tests/spec/emit/snapshots/receiver_type_in_struct.snap
---
source: tests/spec/emit/concurrency.rs
description: "input: \nstruct Consumer { input: Receiver<int> }\n\nfn test(c: Consumer) -> Receiver<int> {\n  c.input\n}\n"
---
package main

type Consumer struct {
	input <-chan int
}

func test(c Consumer) <-chan int {
	return c.input
}
